@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 22 Oct 2024 14:23:38 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 22 Oct 2024 14:32:11 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -290,5 +290,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>BTS成員鄭號錫退伍。韓國時間10月17日，BTS成員鄭號錫完成18個月的義務兵役，成為該團第二位退伍的成員。...</description>
   <category>K-Pop</category>
   <pubDate>Tue, 22 Oct 2024 14:23:38 +0800</pubDate>
+</item><item>
+  <title>BTS成員Jin首張個人專輯《Happy》即將發行！英國搖滾樂風格主打歌曲《Running Wild》搶先曝光</title>
+  <link>https://www.famechos.me/news/BTS成員Jin首張個人專輯《Happy》即將發行！英國搖滾樂風格主打歌曲《Running Wild》搶先曝光.html</link>
+  <description>BTS成員Jin首張個人專輯《Happy》即將發行。BTS成員Jin的首張個人專輯《Happy》將於11月15日發行，專輯的主打歌曲是《Running Wild》。...</description>
+  <category>K-Pop</category>
+  <pubDate>Tue, 22 Oct 2024 14:32:11 +0800</pubDate>
 </item></channel>
 </rss>
