@@ -1,0 +1,274 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "BTS\u6210\u54e1Jin\u9996\u5f35\u500b\u4eba\u5c08\u8f2f\u300aHappy\u300b\u5373\u5c07\u767c\u884c\uff01\u82f1\u570b\u6416\u6efe\u6a02\u98a8\u683c\u4e3b\u6253\u6b4c\u66f2\u300aRunning Wild\u300b\u6436\u5148\u66dd\u5149", "description": "BTS\u6210\u54e1Jin\u9996\u5f35\u500b\u4eba\u5c08\u8f2f\u300aHappy\u300b\u5373\u5c07\u767c\u884c\uff01\u82f1\u570b\u6416\u6efe\u6a02\u98a8\u683c\u4e3b\u6253\u6b4c\u66f2\u300aRunning Wild\u300b\u6436\u5148\u66dd\u5149", "url": "https://www.famechos.me/news/BTS\u6210\u54e1Jin\u9996\u5f35\u500b\u4eba\u5c08\u8f2f\u300aHappy\u300b\u5373\u5c07\u767c\u884c\uff01\u82f1\u570b\u6416\u6efe\u6a02\u98a8\u683c\u4e3b\u6253\u6b4c\u66f2\u300aRunning Wild\u300b\u6436\u5148\u66dd\u5149.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T14:32:03.057088+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/BTS成員Jin首張個人專輯《Happy》即將發行！英國搖滾樂風格主打歌曲《Running Wild》搶先曝光.html"/>
+<meta name="description" content="BTS成員Jin首張個人專輯《Happy》即將發行！搶先曝光主打歌曲《Running Wild》，英國搖滾樂風格震撼登場！">
+<meta name="keywords" content="BTS,Jin,Happy,個人專輯,Running Wild,英國搖滾樂,主打歌曲,KPOP">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/BTS成員Jin首張個人專輯《Happy》即將發行！英國搖滾樂風格主打歌曲《Running Wild》搶先曝光.html" />
+        <meta property="og:title" content="BTS成員Jin首張個人專輯《Happy》即將發行！英國搖滾樂風格主打歌曲《Running Wild》搶先曝光" />
+        <meta property="og:description" content="BTS成員Jin首張個人專輯《Happy》即將發行！英國搖滾樂風格主打歌曲《Running Wild》搶先曝光" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="BTS成員Jin首張個人專輯《Happy》即將發行！英國搖滾樂風格主打歌曲《Running Wild》搶先曝光" />
+        <meta property="twitter:description" content="BTS成員Jin首張個人專輯《Happy》即將發行！英國搖滾樂風格主打歌曲《Running Wild》搶先曝光" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>BTS成員Jin首張個人專輯《Happy》即將發行！英國搖滾樂風格主打歌曲《Running Wild》搶先曝光</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>BTS成員Jin的首張個人專輯《Happy》將於11月15日發行，專輯的主打歌曲是《Running Wild》。</p>
+<p>根據Jin的經紀公司BigHit Music的公告，專輯將包含六首歌曲，包括《Running Wild》、《I'll Be There》、《Level》、《Until I Reach You》、《Heart on the Window》（feat. Red Velvet的Wendy）和《In Longing》。</p>
+<p>《Running Wild》是一首受英國搖滾樂影響的流行搖滾歌曲，由英國流行樂團接招合唱團（Take That）的蓋瑞·巴洛（Gary Barlow）製作。這首歌曲傳達了一個充滿希望的信息，鼓勵人們堅持不懈地追求自己的目標。</p>
+<p>先行發行的單曲《I'll Be There》是與美國歌手MAX合作的作品，表達了Jin希望在聽眾感到疲倦和孤獨時給予他們能量的願望。</p>
+<p>日本搖滾樂團ONE OK ROCK的成員森內貴寬（Takahiro Moriuchi）和山下亨（Toru Yamashita）是《Until I Reach You》的合作藝人。</p>
+<p>最後一首歌曲《In Longing》是一首由Jin為他的粉絲寫的抒情歌曲。</p>
+<ul>
+<li>專輯曲目列表：
+<ol>
+<li>《Running Wild》</li>
+<li>《I'll Be There》</li>
+<li>《Level》</li>
+<li>《Until I Reach You》</li>
+<li>《Heart on the Window》（feat. Red Velvet的Wendy）</li>
+<li>《In Longing》</li>
+</ol>
+</li>
+</ul>
+<h2>韓國要求北韓立即從俄羅斯撤出軍隊</h2>
+<p>韓國政府已敦促北韓立即從俄羅斯撤出其派遣的軍隊。韓國總統與北大西洋公約組織（NATO）秘書長通過電話討論了北韓向俄羅斯派遣軍隊的問題，雙方對此表示擔憂。</p>
+<p>據悉，韓國正在考慮派遣人員前往烏克蘭，以監測北韓軍隊的活動。</p>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2ai-dnwKOic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/金在中首支K-pop女團Say My Name出道！七位成員跨國組合展現多樣音樂風格.html">金在中首支K-pop女團Say My Name出道！七位成員跨國組合展現多樣音樂風格</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅.html">抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/NewJeans成員Hanni國會聽證會痛哭：職場霸凌、內部衝突，誰該負責？.html">NewJeans成員Hanni國會聽證會痛哭：職場霸凌、內部衝突，誰該負責？</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
