@@ -332,4 +332,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/BTS成員Jin首張個人專輯《Happy》即將發行！英國搖滾樂風格主打歌曲《Running Wild》搶先曝光.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T14:32:11+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
