@@ -49,3 +49,4 @@ https://www.koreaherald.com/view.php?ud=20241016050559
 https://www.koreaherald.com/view.php?ud=20241021050701
 https://www.koreaherald.com/view.php?ud=20241015050673
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-halloween-parties-tokyo-night-market-and-koenji-festival/
+https://en.yna.co.kr/view/AEN20241017001052315?section=culture/k-pop&input=rss
